config: Add alias.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,19 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "baseUrl": "src",
+        "paths": {
+            "@/*": ["*"],
+            "@components/*": ["components/*"],
+            "@assets/*": ["assets/*"],
+            "@layout/*": ["layout/*"],
+            "@pages/*": ["pages/*"],
+            "@store/*": ["store/*"],
+            "@routers/*": ["routers/*"],
+            "@services/*": ["services/*"],
+            "@utils/*": ["utils/*"]
+        }
     },
     "include": ["src", "./declaration.d.ts"],
     "references": [
