config: Install "identity-obj-proxy" for Jest and configure paths for tests to run.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
             "@routers/*": ["routers/*"],
             "@services/*": ["services/*"],
             "@utils/*": ["utils/*"]
-        }
+        },
+        "esModuleInterop": true
     },
     "include": ["src", "./declaration.d.ts"],
     "references": [
