--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "eslint-plugin-storybook": "^0.8.0",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "prettier": "3.2.5",
         "sass": "^1.72.0",
