--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "storybook": "^8.0.2",
         "ts-jest": "^29.1.2",
         "typescript": "^5.2.2",
+        "typescript-plugin-css-modules": "^5.1.0",
         "vite": "^5.1.6"
     }
 }
