feat: Configure plugin.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,12 @@
             "@services/*": ["services/*"],
             "@utils/*": ["utils/*"]
         },
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "plugins": [
+            {
+                "name": "typescript-plugin-css-modules"
+            }
+        ]
     },
     "include": ["src", "./declaration.d.ts"],
     "references": [
