--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "build-storybook": "storybook build"
     },
     "dependencies": {
+        "focus-trap-react": "^10.2.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
