--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "tabWidth": 4,
   "singleQuote": true,
-  "jsxBracketSameLine": true,
+  "jsxBracketSameLine": false,
   "vueIndentScriptAndStyle": true,
   "printWidth": 100,
   "trailingComma": "none"
