--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "build-storybook": "storybook build"
     },
     "dependencies": {
+        "axios": "^1.7.2",
         "focus-trap-react": "^10.2.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
@@ -30,6 +31,7 @@
         "@storybook/react": "^8.0.2",
         "@storybook/react-vite": "^8.0.2",
         "@storybook/test": "^8.0.2",
+        "@types/axios": "^0.14.0",
         "@types/jest": "^29.5.12",
         "@types/react": "^18.2.64",
         "@types/react-dom": "^18.2.21",
