--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "build-storybook": "storybook build"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.2.5",
         "axios": "^1.7.2",
         "focus-trap-react": "^10.2.3",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-redux": "^9.1.2"
     },
     "devDependencies": {
         "@babel/core": "^7.24.1",
