--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "focus-trap-react": "^10.2.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-redux": "^9.1.2"
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^6.24.1"
     },
     "devDependencies": {
         "@babel/core": "^7.24.1",
@@ -37,6 +38,7 @@
         "@types/jest": "^29.5.12",
         "@types/react": "^18.2.64",
         "@types/react-dom": "^18.2.21",
+        "@types/react-router-dom": "^5.3.3",
         "@typescript-eslint/eslint-plugin": "^7.1.1",
         "@typescript-eslint/parser": "^7.1.1",
         "@vitejs/plugin-react": "^4.2.1",
